@@ -23,7 +23,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.jayway.restassured.examples</groupId>
     <artifactId>rest-assured-itest-java</artifactId>
     <name>REST Assured Java integration tests</name>
     <description>REST Assured Java integration tests. Here you'll find various examples of how to use rest-assured.</description>
@@ -43,6 +42,11 @@
         <dependency>
             <groupId>com.jayway.restassured</groupId>
             <artifactId>rest-assured</artifactId>
+            <version>2.0.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.restassured</groupId>
+            <artifactId>json-schema-validator</artifactId>
             <version>2.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -74,7 +78,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.0.5</version>
+            <version>2.3.0</version>
         </dependency>
         <dependency>
             <groupId>org.restlet.jse</groupId>
@@ -82,10 +86,5 @@
             <version>2.0.14</version>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>org.springframework</groupId>-->
-        <!--<artifactId>spring-web</artifactId>-->
-        <!--<version>3.0.5.RELEASE</version>-->
-        <!--</dependency>-->
     </dependencies>
 </project>
