@@ -75,6 +75,7 @@
         </mailingList>
     </mailingLists>
     <modules>
+        <module>modules</module>
         <module>rest-assured</module>
         <module>examples</module>
         <module>json-path</module>
@@ -249,7 +250,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>2.0.5</version>
+                <version>2.3.0</version>
                 <optional>true</optional>
             </dependency>
             <dependency>
